--- a/src/main/resources/loot_example.yml
+++ b/src/main/resources/loot_example.yml
@@ -7,57 +7,51 @@
 # such as chance, id, amount, damage, rolls, name, level, or enchant.  They should be unique headings though as if
 # they are the same, errors may occur.
 justaname:
-  '1':
+  1: # The number could be anything, it is only used as a section title.
+     # This section will give a diamond pickaxe when this table is rolled since no chance is listed.
     id: DIAMOND_PICKAXE
-    enchant:
+    enchant: # enchant section applies to all items in its parent section - 1 in this case.
       name: silk_touch
     damage: 60
-  '2':
-    chance: 0.5
-    split: true
-    diamond:
-      id: DIAMOND_SWORD
-      enchant:
-        rolls: 2
-        split: true
+  2:
+    chance: 0.5 # This section has a 50% chance to be used when this table is rolled.
+    split: true # Section '2' will create either a power sword or a silkwood sword
+    power_sword: # A section of loot that gives diamond or iron sword. Either will be enchanted for combat.
+      split: true # Only gives a diamond OR iron sword.
+      diamond: # Just an arbitrary section name
+        id: DIAMOMD_SWORD
+      iron:
+        id: IRON_SWORD
+      enchant: # This enchant section will be applied to the diamon or iron sword when the power_sword section is rolled.
+        rolls: 2 # This enchant section will be rolled for twice.
+        split: true # Since it's split only one of the below enchant will be chosen on each of the 2 passes.
         sharpness:
           name: damage_all
-          level: -5
+          level: -5 # The level of the enchant
         knockback:
           name: knockback
         fire:
           name: fire_aspect
           level: 2
-    iron:
-      id: IRON_SWORD
-      enchant:
-        rolls: 2
-        split: true
-        sharpness:
-          name: damage_all
-          level: -5
-        knockback:
-          name: knockback
-        fire:
-          name: fire_aspect
-          level: 2
-    wood:
+    silkwood_sword: # a wooden sword with silk touch is the alternative to the diamond or iron sword above.
       id: WOODEN_SWORD
-      damage: -1
+      damage: -1 # a damage value of -1 makes the item unbreakable
       enchant:
         name: silk_touch
-  '3':
+  3: # This section is rolled 10 times and has a 10% chance to be selected.
     rolls: 10
     chance: 0.1
     split: true
-    '1':
-      chance: 5
+    1:
+      chance: 5 # Due to the parent section being 'split: true' this is a weight rather than a percent chance.
+                # Weights are relative to the weight of all other sections. In this case, the chance of 5 means
+                # the weight is 5 times more than the chance of 1 in the below section.
       id: DIAMOND
-    '2':
+    2:
       chance: 1
       id: GOLD_INGOT
       amount: 5
-  '4':
-    chance: 0.1
+  4:
+    chance: .10
     id: BRICK
     amount: 20
